--- a/MyBlog.WebUI/Areas/Administrator/Views/Auth/Login.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Auth/Login.cshtml
@@ -8,28 +8,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Giriş - Ömer ARIYÜREK</title>
     <link href="~/styles/app.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-<section id="admin-login" class="admin-operations">
-    <div class="container-fluid">
-        <div class="login-area">
-            <img src="./dist/img/logo.svg" alt="">
-            <div class="form-group">
-                <label for="username">Kullanıcı Adı</label>
-                <input type="text" name="username" id="username">
+<form asp-controller="Auth" asp-action="Login" method="post">
+    <section id="admin-login" class="admin-operations">
+        <div class="container-fluid">
+            <div class="login-area">
+                <div class="form-group">
+                    <label>Kullanıcı Adı</label>
+                    <input asp-for="UserName" />
+                </div>
+                <div class="form-group">
+                    <label>Şifre</label>
+                    <input asp-for="Password" />
+                </div>
+                <button type="submit" class="login-btn">Giriş Yap</button>
             </div>
-            <div class="form-group">
-                <label for="pass">Şifre</label>
-                <input type="text" name="pass" id="pass">
-            </div>
-            <button type="submit" class="login-btn">Giriş Yap</button>
         </div>
-    </div>
-</section>
+    </section>
+</form>
+
 <!-- Script -->
-<script src="./dist/js/app.min.js"></script>
 </body>
 </html>
