Added new classes,interfaces and methods

--- a/MyBlog.WebUI/Areas/Administrator/Views/Category/Index.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Category/Index.cshtml
@@ -5,75 +5,112 @@
 <div class="admin-new-object">
     <div class="admin-add-object col-md-4">
         <div class="admin-object-text">
-            <h3>Add New Category</h3>
+            <h3 class="font-bold">Add New Category</h3>
             <div class="admin-object-input">
-                <form asp-controller="Category" asp-action="CategoryAdd" method="post">
-                    <div class="form-group">
-                        <label>Category Name</label>
+                <form id="categoryUpdateForm" asp-controller="Category" asp-action="Add" method="post">
+                    <div class="form-group form-design">
+                        <label asp-for="Category.CategoryName">Category Name</label>
                         <input asp-for="Category.CategoryName" placeholder="Category Name" class="form-control">
-                        <span asp-validation-for="Category.CategoryName"></span>
+                        <span class="form-validation-alert" asp-validation-for="Category.CategoryName"></span>
                     </div>
-                    <div class="form-group">
-                        <label>Category Description</label>
-                        <textarea asp-for="Category.CategoryDescription" rows="2" cols="20" class="form-control" style="resize: none; margin-top: 10px" placeholder="Category Description"></textarea>
+                    <div class="form-group form-design">
+                        <label asp-for="Category.CategoryDescription">Category Description</label>
+                        <textarea asp-for="Category.CategoryDescription" rows="2" cols="20" class="form-control" style="resize: none;" placeholder="Category Description"></textarea>
                         <span asp-validation-for="Category.CategoryDescription"></span>
                     </div>
                     <div class="button-object-add">
-                        <button type="submit" class="btn btn-info">Add Category</button>
+                        <button type="submit" id="categoryAdd" class="btn btn-info">Add Category</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
     <div class="admin-object-table col-md-8">
-        <div class="search-object">
-            <input type="text" class="form-control form-fix" placeholder="Search Category">
-            <button type="button" class="btn-info">Search</button>
-        </div>
-        <div class="delete-object">
-            <button type="button" class="btn btn-info">Delete</button>
+        <div class="search-object-base">
+            <div class="search-object">
+                <form asp-controller="Category" asp-action="Index" method="get">
+                    <input asp-for="Category.CategoryName" class="form-control form-fix" name="search" placeholder="Search Category">
+                    <button type="submit" class="btn btn-info">Search</button>
+                </form>
+            </div>
         </div>
         <div class="admin-object-table-info">
+            @if (TempData["searchCategory"] != null)
+            {
+                <div class="alert alert-primary" style="margin-top: 50px" role="alert">
+                    Searched Category : @TempData["searchCategory"]
+                </div>
+            }
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
                         <th scope="col">Category Name</th>
                         <th scope="col">Category Description</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Operations</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var category in Model.Categories)
                     {
-                        <tr>
-                            <th scope="row">@category.CategoryId</th>
+                        <tr id="row_category_@category.CategoryId">
                             <td>@category.CategoryName</td>
                             <td>@category.CategoryDescription</td>
+                            <td>@category.Status</td>
+                            <td>
+                                <a class="table-button-object" href="#" onclick="return getCategoryById(@category.CategoryId)">Update</a> |
+                                <a class="table-button-object" href="#" onclick="deleteCategory(@category.CategoryId)">Delete</a>
+                            </td>
                         </tr>
                     }
                 </tbody>
             </table>
         </div>
-        <div class="pagining-admin" style="width: 100%; position: relative; display: inline-block; text-align: center">
+        <div class="pagining-admin">
             <nav aria-label="Page navigation example" style="display: inline-block;">
                 <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
+                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
                 </ul>
             </nav>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="categoryUpdateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Category</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form asp-controller="Category" asp-action="Update" method="post">
+                    <input type="hidden" asp-for="Category.CategoryId" id="CategoryIdModal" />
+                    <div class="form-group form-design">
+                        <label asp-for="Category.CategoryName" class="col-form-label">Category Name</label>
+                        <input asp-for="Category.CategoryName" class="form-control" id="CategoryNameModal" />
+                        <span asp-validation-for="Category.CategoryName"></span>
+                    </div>
+                    <div class="form-group form-design">
+                        <label asp-for="Category.CategoryDescription" class="col-form-label">Category Description</label>
+                        <textarea rows="3" asp-for="Category.CategoryDescription" class="form-control textarea-size" id="CategoryDescriptionModal"></textarea>
+                    </div>
+                    <div class="form-group form-design" style="padding-bottom: 10px;">
+                        <label asp-for="Category.SeoUrl" class="col-form-label">Seo Url</label>
+                        <input asp-for="Category.SeoUrl" class="form-control" id="CategorySeoUrlModal" />
+                    </div>
+
+                    <div class="modal-footer">
+                        <div class="form-check alignment">
+                            <input type="checkbox" asp-for="Category.Status" class="form-check-input" id="CategoryStatusModal" />
+                            <label asp-for="Category.Status" class="form-check-label">Status</label>
+                        </div>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-info">Save</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
