--- a/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -34,8 +34,10 @@
                         </a>
                     </li>
                     <li class="list-item">
-                        <img src="~/Content/images/comments.png" />
-                        <a href="#">Comments</a>
+                        <a href="@Url.Action("Index", "Comment")">
+                            <img src="~/Content/images/comments.png" />
+                            Comments
+                        </a>
                     </li>
                     <li class="list-item">
                         <a href="@Url.Action("Index", "Tag")">
@@ -44,8 +46,10 @@
                         </a>
                     </li>
                     <li class="list-item">
-                        <img src="~/Content/images/contacts.png" />
-                        <a href="#">Contacts</a>
+                        <a href="@Url.Action("Index", "Contact")">
+                            <img src="~/Content/images/contacts.png" />
+                            Contacts
+                        </a>
                     </li>
                 </ul>
             </div>
